--- a/index.html
+++ b/index.html
@@ -5,18 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Booleaner</title>
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@600&family=Montserrat:ital@1&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="./assets/img/logo.svg" type="image/x-icon">
 </head>
 <body>
     
-    <header id="site_header">   
-        <img src="./assets/img/pattern.png" alt="pattern header">
+    <header id="site_header"> 
+        <div id="Container">
+            <img id="logo" src="./assets/img/logo.svg" alt="logo">
+        </div>  
+        <!-- add_pattern -->
         
     </header>
     <!-- /#site_header -->
+
     <main id="site_main">
 
     </main>
     <!-- /#site_main -->
+
     <footer id="site_footer">
 
     </footer>
