--- a/index.html
+++ b/index.html
@@ -43,7 +43,32 @@
             <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit pariatur culpa debitis sit laborum repellendus iste enim, eos quos dolor fugiat. Nulla excepturi quis harum nemo. Accusamus, dolor nesciunt! Odio?</li>
         </ul>
 
-        <table></table>
+        <table>
+            <thead>
+                <tr>
+                    <th>Lorem, ipsum dolor.</th>
+                    <th>Lorem, ipsum dolor.</th>
+                    <th>Lorem, ipsum dolor.</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr class="riga">
+                    <td>Lorem, ipsum dolor.</td>
+                    <td>Lorem, ipsum dolor.</td>
+                    <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error sed dicta eligendi, vitae reiciendis quis laudantium ab, autem, dolor commodi necessitatibus eos consequuntur. Adipisci ducimus illum tenetur tempora, dolores a?</td>
+                </tr>
+                <tr>
+                    <td>Lorem, ipsum dolor.</td>
+                    <td>Lorem, ipsum dolor.</td>
+                    <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error sed dicta eligendi, vitae reiciendis quis laudantium ab, autem, dolor commodi necessitatibus eos consequuntur. Adipisci ducimus illum tenetur tempora, dolores a?</td>
+                </tr>
+                <tr class="riga">
+                    <td>Lorem, ipsum dolor.</td>
+                    <td>Lorem, ipsum dolor.</td>
+                    <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error sed dicta eligendi, vitae reiciendis quis laudantium ab, autem, dolor commodi necessitatibus eos consequuntur. Adipisci ducimus illum tenetur tempora, dolores a?</td>
+                </tr>
+            </tbody>
+        </table>
     </main>
     <!-- /#site_main -->
 
