add site update

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </tbody>
         </table>
 
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo atque quas vel accusantium officia amet reprehenderit unde veritatis et harum maiores aliquid quo quod non laboriosam, ipsam praesentium possimus. Nesciunt laborum laudantium earum saepe, sapiente, numquam ipsa corporis doloremque fugiat nemo iste soluta ut temporibus! Enim magni laborum quam illum ullam fugiat soluta et quibusdam, sunt mollitia recusandae eligendi iure incidunt dolorem quidem labore nobis adipisci eveniet! Soluta perspiciatis minima harum fugit, eius excepturi aut dolorem non, ullam ducimus commodi dolores quidem voluptas ab ipsam, perferendis obcaecati quibusdam sunt architecto quia culpa recusandae. Voluptate eveniet consequuntur recusandae possimus, animi veritatis?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo atque <span class="item1">quas vel accusantium officia amet reprehenderit unde veritatis et harum maiores aliquid quo quod non laboriosam,</span> ipsam praesentium possimus. Nesciunt laborum laudantium earum saepe, sapiente, numquam ipsa corporis doloremque fugiat nemo iste soluta ut temporibus! Enim magni laborum quam illum ullam fugiat soluta et quibusdam, sunt mollitia recusandae eligendi iure incidunt dolorem quidem labore nobis adipisci eveniet! Soluta perspiciatis minima harum fugit, eius excepturi aut dolorem non, ullam ducimus commodi dolores quidem voluptas ab ipsam, perferendis obcaecati quibusdam sunt architecto quia culpa recusandae. Voluptate eveniet consequuntur recusandae possimus, animi veritatis?</p>
 
     </main>
     <!-- /#site_main -->
@@ -76,12 +76,11 @@
     <footer id="site_footer">
         
         <h4>Potrebbero interessarti </h4>
-        <div>
-            <img src="./assets/img/monitor.jpg" alt="monitor pc">
-            <span class="text">Lorem, ipsum dolor.</span>
-            <br>
-            <img src="./assets/img/graph.jpg" alt="grafica">
-            <span class="text">Lorem, ipsum dolor.</span>
+        <div id="p1">
+            <p>Lorem, ipsum dolor.</p>
+        </div>
+        <div id="p2">
+            <p>Lorem, ipsum dolor.</p>
         </div>
     </footer>
     <!-- /#site_footer -->
